[gd_scene load_steps=13 format=3 uid="uid://dffb830cnc5t1"]

[ext_resource type="Script" path="res://src/widgets/popup_settings.gd" id="1_wgiyn"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="2_gfiya"]
[ext_resource type="Texture2D" uid="uid://bu45n00mh538b" path="res://assets/textures/widgets/letters/letterS.png" id="3_5to3y"]
[ext_resource type="Texture2D" uid="uid://csf5xxgu6t0fv" path="res://assets/textures/widgets/letters/letterE.png" id="4_h1br4"]
[ext_resource type="Texture2D" uid="uid://bq8acldburxay" path="res://assets/textures/widgets/letters/letterT.png" id="5_qp5ts"]
[ext_resource type="Texture2D" uid="uid://dvp0plc638c1i" path="res://assets/textures/widgets/letters/letterI.png" id="6_5rofp"]
[ext_resource type="Texture2D" uid="uid://ntkwuab7qwvb" path="res://assets/textures/widgets/letters/letterN.png" id="7_d7jab"]
[ext_resource type="Texture2D" uid="uid://vjyjngb1ybto" path="res://assets/textures/widgets/letters/letterG.png" id="8_r6t6p"]
[ext_resource type="Texture2D" uid="uid://cl2yee46qr3ib" path="res://assets/textures/widgets/icons/audioOn.png" id="9_smdwe"]
[ext_resource type="Texture2D" uid="uid://bbgeydhqey4vx" path="res://assets/textures/widgets/icons/musicOn.png" id="10_1geq7"]
[ext_resource type="Texture2D" uid="uid://cf4urcy4ejis2" path="res://assets/textures/widgets/others/yellow_button00.png" id="11_w5jsj"]

[sub_resource type="LabelSettings" id="LabelSettings_6edti"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_settings_popup" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgiyn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_gfiya")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_5to3y")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_h1br4")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_qp5ts")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_qp5ts")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_5rofp")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_d7jab")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_r6t6p")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect8" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_5to3y")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="btn_audio" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("9_smdwe")
ignore_texture_size = true
stretch_mode = 0

[node name="slider_audio" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -50.0
max_value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="btn_music" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("10_1geq7")
ignore_texture_size = true
stretch_mode = 0

[node name="slider_music" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -20.0
max_value = 20.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="btn_confirm" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_w5jsj")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/btn_confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "confirm"
label_settings = SubResource("LabelSettings_6edti")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/btn_confirm" to="." method="_on_btn_confirm_pressed"]
